--- a/pages/view3.html
+++ b/pages/view3.html
@@ -1,11 +1,4 @@
-<!--
- * @Author: yaojinxi 864554492@qq.com
- * @Date: 2023-11-29 19:33:21
- * @LastEditors: yaojinxi 864554492@qq.com
- * @LastEditTime: 2023-12-02 15:39:57
- * @FilePath: \NCI_web-design_CA\pages\view1.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
--->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -67,10 +60,10 @@
             class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary"
         >
             <div class="col-md-6 p-lg-5 mx-auto my-5">
-                <h1 class="display-3 fw-bold">Kyoto</h1>
+                <h1 class="display-3 fw-bold">Rio</h1>
                 <h3 class="fw-normal text-muted mb-3">
-                    Kyoto is one of oldest cities in Japan. Many tourists from
-                    all over the world come to Kyoto.
+                    One of the most visited cities in the Southern Hemisphere 
+                    and is known for its natural settings.
                 </h3>
                 <div class="d-flex gap-3 justify-content-center lead fw-normal">
                     <a class="icon-link" href="../pages/join.html">
@@ -80,11 +73,11 @@
             </div>
             <img
                 class="product-device shadow-sm d-none d-md-block"
-                src="../images/kyoto3.png"
+                src="../images/Rio-de-Janeiro12.png"
             />
             <img
                 class="product-device product-device-2 shadow-sm d-none d-md-block"
-                src="../images/kyoto4.png"
+                src="../images/Rio-de-Janeiro6.jpg"
             />
         </div>
 
@@ -92,33 +85,36 @@
             <div class="view-container">
                 <div class="view-container-div">
                     <p class="view-content-text">
-                        Kyoto contains roughly 2,000 temples and shrines. The
-                        main business district is located to the south of the
-                        Kyoto Imperial Palace. In the center of the city, there
-                        are several covered shopping arcades only open to
-                        pedestrian traffic, such as Teramachi Street and
-                        Shinkyōgoku Street. The original city was arranged in
-                        accordance with traditional Chinese feng shui following
-                        the model of the ancient Chinese capital of
-                        Chang'an/Luoyang. The Imperial Palace faced south,
-                        resulting in Ukyō (the right sector of the capital)
-                        being on the west, while Sakyō (the left sector) is on
-                        the east. The streets in the modern-day wards of
-                        Kamigyō-ku, Nakagyō-ku, and Shimogyō-ku still follow a
-                        grid pattern. Areas outside of the city center do not
-                        follow the same grid pattern, though streets throughout
-                        Kyoto are referred to by name, a practice that is rare
-                        in most regions of Japan.
+                        Rio de Janeiro is located on the Atlantic Ocean,
+                        in the southeastern part of the tropical zone of South America,
+                        and is widely recognized as one of the world’s 
+                        most beautiful and interesting urban centres. 
+                        Although Rio de Janeiro continues to be the preeminent
+                        icon of Brazil in the eyes of many in the world, 
+                        in reality its location, architecture, inhabitants, 
+                        and lifestyle make it highly unique. 
+                        Rio de Janeiro is well known for the beauty of its beaches 
+                        and of its peaks, ridges, and hills—all partly covered by 
+                        tropical forests. The city is a centre of leisure for Brazilian 
+                        and foreign tourists. Perhaps at no time is the city’s festive 
+                        reputation better displayed than during the annual pre-Lenten Carnival, 
+                        which enlivens the city night and day with music, singing, parties, balls, 
+                        and street parades of brilliantly costumed dancers performing to samba rhythms. 
+                        Rio is also an important economic centre, however, with activities ranging 
+                        from industry and national and international trade to administration, banking, 
+                        education, culture, and research.
                     </p>
                     <div class="view-content-img">
                         <div class="view-content-wrapper">
                             <img
                                 class="view-content-img-info"
-                                src="../images/Kyoto-Nature.jpg"
+                                src="../images/Rio-de-janeiro2.png"
                             />
                         </div>
                     </div>
                 </div>
+
+                
             </div>
         </div>
     </body>
